# lasso

./: .cvsignore  .gitignore  AUTHORS  COPYING  ChangeLog  FAQ.rst  HACKING  INSTALL  Makefile.am  NEWS  README  README.JAVA  README.WIN32  TODO  autogen.sh  changelog  configure.ac  control  control.in  copyright  doap.rdf  jenkins.sh  lasso.doap  lasso.pc.in  liblasso-java.files  liblasso-perl.install  liblasso-perl.install.in  liblasso0-cil.files  liblasso0-python2.3.files  liblasso3-dev.install  php5-lasso.postinst  php5-lasso.prerm  python-lasso.files  python-lasso.install  python3-lasso.install  rules
bindings/: Makefile.am  bindings.py  ghashtable.h  lang_java.py  lang_java_wrapper_top.c  lang_php5.py  lang_python.py  lang_python_wrapper_bottom.c  lang_python_wrapper_top.c  overrides.xml  t.py  utils.c  utils.py
bindings/java/: GObject.java  LassoException_top.java  Makefile.am  TODO  lang.py  wrapper_top.c
bindings/lang_php5_helpers/: php_code.py  wrapper_header.py  wrapper_source.py  wrapper_source_top.c
bindings/perl/: LassoNode.xs  Makefile.PL  Makefile.am  ghashtable_handling.c  glist_handling.c  gobject_handling.c  lang.py  test.pl  test.sh  typemap-in  typemap-out  typemap.in
bindings/php4/: Makefile.am  _lasso.h  lang.py  lasso_php4_helper.c
bindings/php5/: Makefile.am  lang.py  php_code.py  wrapper_header.py  wrapper_source.py  wrapper_source_top.c
bindings/python/: Makefile.am  lang.py  wrapper_bottom.c  wrapper_top.c
csharp/: .cvsignore  AssemblyInfo.cs  Makefile.am
csharp/examples/: perfs.cs  runme.cs
csharp/tests/: BindingTests.cs
docs/lasso-book/: Makefile.am  book.rst  check-functions.py  common-knowledge.rst  defederation.process  getting-lasso.rst  lasso-book.txt  liberty-architecture.rst  name-registration.process  preface.rst  single-logout.process  single-sign-on.process  single-sign-on.rst  writing-a-c-sp.txt  writing-a-java-sp.txt  writing-a-php-sp.txt  writing-a-saml2-php-sp.txt
docs/reference/: .cvsignore  Makefile.am  lasso-sections.txt  lasso-sections.txt.in  lasso.sgml  lasso.types  lasso.types.in  snippet-types.rst  style.css
java/: .cvsignore  Makefile  Makefile.am  Question  lasso-fragment.java
java/coldfusion/: Makefile
java/doc/: ImplantationMapping.rst
java/src/: Makefile.am
java/tests/: BindingTests.java  LoginTest.java
lasso/: .cvsignore  Makefile.am  backward_comp.h  build_strerror.py  ctypes.h  debug.h  errors.c  errors.c.in  errors.h  export.h  extract_sections.py  extract_symbols.py  extract_types.py  key.c  key.h  keyprivate.h  lasso.c  lasso.def  lasso.h  lasso.rc  lasso_config.h.in  logging.c  logging.h  registry-private.h  registry.c  registry.h  soap_binding.c  soap_binding.h  utils.c  utils.h  version.h.in
lasso/id-ff/: Makefile.am  authentication.c  authentication.h  authn_environ.c  authn_environ.h  defederation.c  defederation.h  environ.c  environ.h  federation.c  federation.h  federation_termination.c  federation_termination.h  identity.c  identity.h  identityprivate.h  lecp.c  lecp.h  login.c  login.h  loginprivate.h  logout.c  logout.h  logoutprivate.h  name_identifier_mapping.c  name_identifier_mapping.h  name_registration.c  name_registration.h  profile.c  profile.h  profile_context.c  profile_context.h  profileprivate.h  provider.c  provider.h  providerprivate.h  register_name_identifier.c  register_name_identifier.h  server.c  server.h  (+14 more)
lasso/id-wsf/: Makefile.am  abstract_service.c  abstract_service.h  authentication.c  authentication.h  data_service.c  data_service.h  data_service_private.h  discovery.c  discovery.h  id_ff_extensions.c  id_ff_extensions.h  id_ff_extensions_private.h  id_wsf.h  identity.h  interaction_profile_service.c  interaction_profile_service.h  personal_profile_service.c  personal_profile_service.h  profile_service.c  profile_service.h  profile_service_private.h  soap_binding.c  soap_binding.h  utils.c  utils.h  wsf_profile.c  wsf_profile.h  wsf_profile.h.~1.5.~  wsf_profile.lo  wsf_profile_private.h  wsf_utils.c  wsf_utils.h
lasso/id-wsf-2.0/: Makefile.am  data_service.c  data_service.h  discovery.c  discovery.h  id_wsf_2.h  identity.c  identity.h  idwsf2_helper.c  idwsf2_helper.h  private.h  profile.c  profile.h  saml2_login.c  saml2_login.h  saml2_login_private.h  server.c  server.h  serverprivate.h  session.c  session.h  sessionprivate.h  soap_binding.c  soap_binding.h  wsf2_profile.c  wsf2_profile.h  wsf2_profile_private.h
lasso/saml-2.0/: Makefile.am  assertion_query.c  assertion_query.h  ecp.c  ecp.h  ecpprivate.h  federation.c  federationprivate.h  login.c  loginprivate.h  logout.c  logoutprivate.h  name_id_management.c  name_id_management.h  profile.c  profile.h  profileprivate.h  provider.c  provider.h  providerprivate.h  saml2_helper.c  saml2_helper.h  server.c  serverprivate.h
lasso/xml/: Makefile.am  debug.c  debug.h  disco_authenticate_requester.c  disco_authenticate_requester.h  disco_authenticate_session_context.c  disco_authenticate_session_context.h  disco_authorize_requester.c  disco_authorize_requester.h  disco_credentials.c  disco_credentials.h  disco_description.c  disco_description.h  disco_encrypt_resource_id.c  disco_encrypt_resource_id.h  disco_encrypted_resource_id.c  disco_encrypted_resource_id.h  disco_generate_bearer_token.c  disco_generate_bearer_token.h  disco_insert_entry.c  disco_insert_entry.h  disco_modify.c  disco_modify.h  disco_modify_response.c  disco_modify_response.h  disco_options.c  disco_options.h  (+238 more)
php/: Makefile.am  lasso.c  lasso.h  patch_swig_output.py  php_lasso.h  run-tests.php.in
php5/: Makefile.am
python/: .cvsignore  INSTALL  MANIFEST.in  Makefile.am  generator_lasso_strings.py  lasso.py  lasso_strings.py  lassomod.c  lassomod.h  py_lasso.c  py_lasso.h  setup.py  utils.c  utils.h  wrap_objs.c  wrap_objs.h
tests/: .cvsignore  Makefile.am  assertion_query_saml2.c  basic_tests.c  idwsf2_tests.c  login_tests.c  login_tests_saml2.c  metadata_tests.c  non_regression_tests.c  perfs.c  random_tests.c  tests.c  tests.h  tests2.c
win32/: Makefile.am  create_lasso.def.py  lasso.def  lasso.rc  lasso.rc.in
(+3625 files in other folders)
